--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <title>bsx-temp-print</title>
 </head>
-<body>
-<div id="root"></div>
+
+<body class="dark">
+  <div id="root"></div>
 </body>
+
 </html>
